# databricks_rag

./: CLAUDE.md  README.md  databricks.yml  pyproject.toml
.databricks/bundle/dev/: vscode.overrides.json
.github/workflows/: deploy.yml
resources/: jobs.yml
src/db_rag/: __init__.py
src/db_rag/tasks/: __init__.py  embeddings.py  ingest.py  vector_index.py
