[tool.poetry]
name = "db-rag"
version = "0.1.0"
description = "DB RAG Pipeline for Databricks"
authors = ["Your Name <you@example.com>"]
packages = [{include = "db_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.4.0"
databricks-sdk = "^0.18.0"
mlflow = "^2.8.0"
openai = "^1.0.0"
sentence-transformers = "^2.2.0"
chromadb = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
ingest_data = "db_rag.tasks.ingest:main"
process_embeddings = "db_rag.tasks.embeddings:main"
create_vector_index = "db_rag.tasks.vector_index:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3